# Discharge-Summary-Agent

./: .gitignore  DEMO_AND_INTERVIEW_GUIDE.md  PROJECT_STRUCTURE.md  README.md  SUBMISSION_CHECKLIST.md  app.js  pyproject.toml
.github/workflows/: pages.yml
data/runs/patient-a-clean/: structured_summary.json
data/runs/patient-b-conflict-pending/: learning_metrics.json  (+1 more)
demo_patients/patient-b-conflict-pending/: source_notes.txt
docs/: app.js  index.html  styles.css
docs/data/: manifest.json
ocr_cache/: patient_source_notes.ocr.txt
outputs/: discharge_summary_draft.md  learning_metrics.json  state.json  trace.json
outputs_demo/: batch_index.json
outputs_demo/patient-a-clean/: learning_metrics.json  quality_report.md  state.json  trace.json
outputs_demo/patient-b-conflict-pending/: state.json  trace.json
outputs_samples/: batch_index.json
outputs_samples/patient-a-clean/: discharge_summary_draft.md  learning_metrics.json  quality_report.json  state.json  structured_summary.json  trace.json
outputs_samples/patient-b-conflict-pending/: discharge_summary_draft.md  learning_metrics.json  quality_report.json  quality_report.md  state.json  structured_summary.json  trace.json
sample_patients/patient-a-clean/: source_notes.txt
scripts/: build_static_site.py  make_synthetic_patients.py  validate_project.py  validate_submission.py
src/dscribe_agent/: __init__.py  agent.py  cli.py  extractors.py  learning.py  models.py  pdf_ingest.py  reporting.py  tools.py  web_app.py
tests/: test_agent_safety.py
web/: app.js  index.html  styles.css
(+13 files in other folders)
